<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoeLibs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_borrowings">My Borrowings</string>
    <string name="title_activity_return_loanable">Return Loanable</string>
    <string name="loanable_tag">Tag</string>
    <string name="OK">OK</string>
    <string name="scanTag">Scan Tag</string>
    <string name="loanableTitle">Title</string>
    <string name="currentBorrower">Current Borrower</string>
    <string name="returnText">Return</string>
    <string name="title_activity_add_edit_loanable">Edit Loanable</string>
    <string name="titleAddLoanable">Add Loanable</string>
    <string name="titleEditLoanable">Edit Loanable</string>
    <string name="loanableInfo">Loanable Info</string>
    <string name="location">Location</string>
    <string name="sublocation">Sublocation</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="searchBar">Name, Author, ISBN..</string>
    <string name="search">Search</string>
    <string name="title_activity_add_edit_title">Title</string>
    <string name="title_activity_edit_title">Edit Title</string>
    <string name="title_activity_add_title">Add Title</string>
    <string name="bookInfo">Book Info</string>
    <string name="ISBN">ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="editionNo">Edition No</string>
    <string name="editionYear">Edition Year</string>
    <string name="yearOfFirstEdition">Year of First Edition</string>
    <string name="myBorrowings">My Borrowings</string>
    <string name="myInventory">My Inventory</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_my_inventory">My Inventory</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="mainMenu">Main Menu</string>
    <string name="scan">Scan</string>
    <string name="title_activity_handout">Handout</string>
    <string name="FilterByBorrower">Filter by borrower...</string>
    <string name="AvailableReservations">Available reservations</string>
    <string name="title_activity_handout_details">Handout</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="BorrowerName">Borrowers name</string>
    <string name="BookTag">Book Tag</string>
    <string name="BorrowersName">Borrowers Name</string>
    <string name="WriteTag">BookTag</string>
    <string name="title_activity_book_info">Book Info</string>
    <string name="reservations">Reservations</string>
    <string name="loanables">Loanables</string>
    <string name="editTitle">Edit Title</string>
    <string name="reserve">Reserve</string>
    <string name="addLoanable">Add Loanable</string>
    <string name="getBookInfo">Fetch Info</string>

</resources>