<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.groupd2.doelibs.ReturnLoanableActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/generalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/loanable_tag" />

            <EditText
                android:id="@+id/editTextloanableTag"
                style="@style/generalEditText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/loanable_tag" />

            <Button
                android:id="@+id/buttonReturnOK"
                style="@style/generalButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:onClick="onOK"
                android:text="@string/OK" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonReturnScanTag"
            style="@style/generalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onScanTag"
            android:text="@string/scanTag" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutReturnLoanInfo"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:orientation="vertical" >

            <TextView
                style="@style/generalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/loanableTitle" />

            <EditText
                android:id="@+id/textReturnTitleName"
                style="@style/generalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:orientation="vertical" >

            <TextView
                style="@style/generalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/currentBorrower" />

            <EditText
                android:id="@+id/textReturnBorrowerName"
                style="@style/generalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:inputType="none" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonReturnReturn"
        style="@style/generalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onReturn"
        android:text="@string/returnText" />

</LinearLayout>