<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.groupd2.doelibs.BookInfoActivity" >

    <include layout="@layout/searchbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

            <TextView
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookInfo" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="#FF000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="20dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ISBN" />

                    <EditText
                        android:id="@+id/editTextTitleISBN"
                        style="@style/nonEditableEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/ISBN" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title" />

                    <EditText
                        android:id="@+id/editTextTitleTitle"
                        style="@style/nonEditableEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/author" />

                    <EditText
                        android:id="@+id/editTextTitleAuthor"
                        style="@style/nonEditableEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/author" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/publisher" />

                    <EditText
                        android:id="@+id/editTextTitlePublisher"
                        style="@style/nonEditableEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/publisher" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/editionNo" />

                    <EditText
                        android:id="@+id/editTextTitleEditionNo"
                        style="@style/nonEditableEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/editionNo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/editionYear" />

                    <EditText
                        android:id="@+id/editTextTitleEditionYear"
                        style="@style/nonEditableEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/editionYear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/yearOfFirstEdition" />

                    <EditText
                        android:id="@+id/editTextTitleYearOfFirstEdition"
                        style="@style/nonEditableEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/yearOfFirstEdition" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservations" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="#FF000000" />

            <com.groupd2.doelibs.helpers.NonScrollableListView
                android:id="@+id/nonScrollableListBookInfoReservations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </com.groupd2.doelibs.helpers.NonScrollableListView>

            <TextView
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loanables" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="#FF000000" />

            <com.groupd2.doelibs.helpers.NonScrollableListView
                android:id="@+id/nonScrollableListBookInfoLoanables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </com.groupd2.doelibs.helpers.NonScrollableListView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonEditTitle"
            style="@style/generalButton"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onEdit"
            android:text="@string/editTitle" />

        <Button
            android:id="@+id/buttonReserveTitle"
            style="@style/generalButton"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onReserve"
            android:text="@string/reserve" />

        <Button
            android:id="@+id/buttonAddLoanableTitle"
            style="@style/generalButton"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onAddLoanable"
            android:text="@string/addLoanable"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>