<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.groupd2.doelibs.AddEditTitleActivity" >

    <include layout="@layout/searchbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <TextView
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookInfo" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="#FF000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="20dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/generalTextView"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/ISBN" />

                        <EditText
                            android:id="@+id/editTextTitleISBN"
                            style="@style/generalEditText"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="4"
                            android:hint="@string/ISBN"
                            android:inputType="text" />

                        <Button
                            android:id="@+id/scanISBN"
                            style="@style/generalButton"
                            android:layout_width="0px"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:onClick="onScan"
                            android:text="@string/scan" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/getBookInfo"
                        style="@style/generalButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onGetBookInfo"
                        android:text="@string/getBookInfo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/title" />

                    <EditText
                        android:id="@+id/editTextTitleTitle"
                        style="@style/generalEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/title"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/author" />

                    <EditText
                        android:id="@+id/editTextTitleAuthor"
                        style="@style/generalEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/author"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/publisher" />

                    <EditText
                        android:id="@+id/editTextTitlePublisher"
                        style="@style/generalEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/publisher"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/editionNo" />

                    <EditText
                        android:id="@+id/editTextTitleEditionNo"
                        style="@style/generalEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/editionNo"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/editionYear" />

                    <EditText
                        android:id="@+id/editTextTitleEditionYear"
                        style="@style/generalEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/editionYear"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/generalTextView"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/yearOfFirstEdition" />

                    <EditText
                        android:id="@+id/editTextTitleYearOfFirstEdition"
                        style="@style/generalEditText"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="2"
                        android:hint="@string/yearOfFirstEdition"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonAddEditTitle"
        style="@style/generalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="onResult"
        android:text="" />

</LinearLayout>