<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.groupd2.doelibs.AddEditLoanableActivity" >

    <TextView
        style="@style/headerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loanableInfo" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="#FF000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/generalTextView"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location" />

            <EditText
                android:id="@+id/editTextloanableLocation"
                style="@style/generalEditText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:hint="@string/location"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                style="@style/generalTextView"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sublocation" />

            <EditText
                android:id="@+id/editTextloanableSublocation"
                style="@style/generalEditText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:hint="@string/sublocation"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>
    
    <Button
        android:id="@+id/buttonAddEditLoanable"
        style="@style/generalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onResult"
        android:text="" />

</LinearLayout>